--- a/StudizPrototype/app/src/main/res/layout/activity_main.xml
+++ b/StudizPrototype/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,14 @@
     tools:context=".MainActivity">
 
     <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/studizfarve"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
         android:layout_width="40dp"
         android:layout_height="match_parent"
         android:background="@color/studizfarve"
