--- a/StudizPrototype/app/src/main/res/layout/toolbar.xml
+++ b/StudizPrototype/app/src/main/res/layout/toolbar.xml
@@ -23,16 +23,16 @@
             android:textStyle="bold"
             android:textColor="@color/white"
             android:layout_toRightOf="@id/searchIcon"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="25dp"
             android:gravity="center_horizontal"
             android:layout_toLeftOf="@id/kortIcon" />
 
         <ImageButton
             android:id="@+id/kortIcon"
+
             android:background="@color/studizfarve"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_location_on_24"
+            android:layout_width="50dp"
+            android:layout_height="20dp"
             android:layout_alignParentRight="true" />
 
 
