--- a/StudizPrototype/app/src/main/res/layout/activity_studiekort.xml
+++ b/StudizPrototype/app/src/main/res/layout/activity_studiekort.xml
@@ -6,11 +6,46 @@
     android:layout_height="match_parent"
     tools:context=".Studiekort">
 
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@color/studizfarve"
+        app:layout_constraintBottom_toTopOf="@+id/slider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        android:orientation="horizontal" >
+
+        <ImageButton
+            android:id="@+id/searchBtn"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:background="@color/studizfarve"
+            android:src="@drawable/ic_baseline_search_24"
+            android:layout_marginLeft="12dp"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/Studiekort"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout2"/>
+
     <ImageView
         android:id="@+id/studirkortImg"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="84dp"
         android:src="@drawable/ic_baseline_person_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
