--- a/StudizPrototype/app/src/main/res/layout/activity_bar.xml
+++ b/StudizPrototype/app/src/main/res/layout/activity_bar.xml
@@ -82,7 +82,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:backgroundTint="@color/studizlys"
-            android:src="@drawable/ic_baseline_category_hvid" />
+            android:src="@drawable/kategori_logo2"
+            android:scaleType="centerInside"/>
 
         <ImageButton
             android:id="@+id/studiekortBtn"
@@ -90,7 +91,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:backgroundTint="@color/studizlys"
-            android:src="@drawable/ic_baseline_perm_identity_hvidkant" />
+            android:src="@drawable/studiekort_logo2"
+            android:scaleType="centerInside" />
 
         <ImageButton
             android:id="@+id/settingsBtn"
