--- a/StudizPrototype/app/src/main/res/layout/activity_studiekort.xml
+++ b/StudizPrototype/app/src/main/res/layout/activity_studiekort.xml
@@ -43,10 +43,10 @@
 
     <ImageView
         android:id="@+id/studirkortImg"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginTop="84dp"
-        android:src="@drawable/ic_baseline_person_24"
+        android:src="@drawable/studiekort_pete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
